--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
+
 :root {
   height:100%;
   font-family: Lekton, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -5,7 +7,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #fff;
+  background-color: var(--color-black-500);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -73,4 +75,197 @@ ol {
   li {
       margin-top: 1em;
   }
+}
+
+
+:root {
+   --color-white-100: hsl(206, 5%, 100%);
+   --color-white-200: hsl(206, 5%, 90%);
+   --color-white-300: hsl(206, 5%, 80%);
+   --color-white-400: hsl(206, 5%, 65%);
+   --color-white-500: hsl(206, 5%, 50%);
+
+   --color-black-100: hsl(213, 20%, 10%);
+   --color-black-200: hsl(213, 23%, 8%);
+   --color-black-300: hsl(214, 21%, 6%);
+   --color-black-400: hsl(210, 21%, 6%);
+   --color-black-500: hsl(216, 22%, 4%);
+   --color-black-600: hsl(220, 18%, 3%);
+   --color-black-700: hsl(220, 27%, 2%);
+   --color-black-800: hsl(180, 20%, 1%);
+
+   --color-blue-100: hsl(214, 95%, 93%);
+   --color-blue-200: hsl(213, 97%, 87%);
+   --color-blue-300: hsl(212, 96%, 78%);
+   --color-blue-400: hsl(213, 94%, 68%);
+   --color-blue-500: hsl(217, 91%, 60%);
+   --color-blue-600: hsl(221, 83%, 53%);
+   --color-blue-700: hsl(224, 76%, 48%);
+   --color-blue-800: hsl(226, 71%, 40%);
+   --color-blue-900: hsl(224, 64%, 33%);
+
+   --shadow-small: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+      0 1px 2px 0 rgba(0, 0, 0, 0.06);
+   --shadow-medium: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+   --shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+*,
+*::before,
+*::after {
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   list-style: none;
+   list-style-type: none;
+   text-decoration: none;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   text-rendering: optimizeLegibility;
+}
+
+html {
+   font-size: 100%;
+   box-sizing: inherit;
+   scroll-behavior: smooth;
+   height: -webkit-fill-available;
+}
+
+body {
+   font-family: "Rubik", sans-serif;
+   font-size: clamp(1rem, 2vw, 1.125rem);
+   font-weight: 400;
+   line-height: 1.5;
+   height: -webkit-fill-available;
+   color: var(--color-white-100);
+   background-color: var(--color-black-500);
+}
+
+main {
+   overflow: hidden;
+}
+
+a,
+button {
+   cursor: pointer;
+   border: none;
+   outline: none;
+   user-select: none;
+   background: none;
+   box-shadow: none;
+   text-decoration: none;
+}
+
+img,
+video {
+   display: block;
+   max-width: 100%;
+   height: auto;
+   object-fit: cover;
+}
+
+// Element Section
+.section {
+   margin: 0 auto;
+   padding: 6rem 0 1rem;
+}
+
+.container {
+   max-width: 75rem;
+   height: auto;
+   margin: 0 auto;
+   padding: 0 1.25rem;
+}
+
+.centered {
+   text-align: center;
+   vertical-align: middle;
+   margin-bottom: 1rem;
+}
+
+.heading {
+   &-xl {
+      font-family: inherit;
+      font-size: clamp(2.648rem, 6vw, 4.241rem);
+      font-weight: 700;
+      line-height: 1.15;
+      letter-spacing: -1px;
+   }
+
+   &-lg {
+      font-family: inherit;
+      font-size: clamp(2.179rem, 5vw, 3.176rem);
+      font-weight: 700;
+      line-height: 1.15;
+      letter-spacing: -1px;
+   }
+
+   &-md {
+      font-family: inherit;
+      font-size: clamp(1.794rem, 4vw, 2.379rem);
+      font-weight: 700;
+      line-height: 1.25;
+      letter-spacing: -1px;
+   }
+
+   &-sm {
+      font-family: inherit;
+      font-size: clamp(1.476rem, 3vw, 1.782rem);
+      font-weight: 600;
+      line-height: 1.5;
+   }
+
+   &-xs {
+      font-family: inherit;
+      font-size: clamp(1.215rem, 2vw, 1.335rem);
+      font-weight: 500;
+      line-height: 1.5;
+   }
+}
+
+.paragraph {
+   font-family: inherit;
+   font-size: clamp(1rem, 2vw, 1.125rem);
+   text-wrap: balance;
+   color: var(--color-white-200);
+}
+
+.btn {
+   display: inline-block;
+   font-family: inherit;
+   font-size: 1rem;
+   font-weight: 500;
+   line-height: 1.5;
+   text-align: center;
+   vertical-align: middle;
+   white-space: nowrap;
+   user-select: none;
+   outline: none;
+   border: none;
+   border-radius: 0.25rem;
+   text-transform: unset;
+   transition: all 0.3s ease-in-out;
+
+   &-inline {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 0.5rem;
+   }
+
+   &-darken {
+      padding: 0.75rem 2rem;
+      color: var(--color-white-100);
+      background-color: var(--color-black-200);
+      box-shadow: var(--shadow-medium);
+   }
+
+   &-neutral {
+      padding: 0.75rem 2rem;
+      color: var(--color-black-500);
+      background-color: var(--color-white-100);
+      box-shadow: var(--shadow-medium);
+   }
 }
