Finishing services section
Added assets

--- a/src/app.scss
+++ b/src/app.scss
@@ -291,3 +291,10 @@ video {
       box-shadow: var(--shadow-medium);
    }
 }
+
+.divider {
+   background-color: #D7282F;
+   height: 6px;
+   margin: 0;
+   width: 70px;
+}
