--- a/src/app.scss
+++ b/src/app.scss
@@ -19,13 +19,13 @@ body {
   height:100%;
 }
 
-h1 {
-  font-size: 2em;
-  font-weight: 900;
+h1, .h1 {
+   font-size: clamp(2.5rem, 3vw, 4rem);
+   font-weight: 900;
 }
-h2 {
-  font-size: 1.5em;
-  font-weight: 700;
+h2, .h2 {
+   font-size: clamp(2rem, 3vw, 3rem);
+   font-weight: 700;
 }
 h3 {
   font-size: 1.3em;
